Remove unwanted security, ratelimit, and cors configs
